--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@ a{color:#007bff;font-weight:bold;text-decoration:none;}
 <img src="logo.png" class="logo">
 
 <h2>
-Vending Machine Locator<br>
-ស្វែងរកទីតាំងម៉ាស៊ីន
+Vending Machine Locator<br>ស្វែងរកទីតាំងម៉ាស៊ីន
 </h2>
 
 <input id="machineInput" placeholder="Enter Machine Number (eg. PYA034)">
