--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <style>
 body{
   font-family:'Noto Sans Khmer',Arial,sans-serif;
-  background:#f4f6f8;
+  background: linear-gradient(135deg, #007bff, #3399ff); /* Blue gradient background */
   margin:0;
   padding:20px;
+  color: #fff; /* default text color white for visibility */
 }
 .container{
   max-width:800px;
