--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@ body{
 .container{
   max-width:800px;
   margin:40px auto;
-  background:#fff;
+  background:#ffffff; /* keep container white for contrast */
   padding:25px;
   border-radius:12px;
-  box-shadow:0 4px 15px rgba(0,0,0,.1);
+  box-shadow:0 4px 15px rgba(0,0,0,.2);
   text-align:center;
+  color:#000; /* container text black for readability */
 }
 .logo{
   max-width:150px;
