--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@ body{
   max-width:150px;
   margin-bottom:15px;
 }
-input{
-  width:100%;
-  padding:12px;
-  font-size:16px;
-  border-radius:6px;
-  border:1px solid #ccc;
-  margin-top:10px;
+input, button {
+  width: 300px;         
+  max-width: 90%;         
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  margin: 10px auto;      
+  display: block;         
 }
-button{
-  margin-top:15px;
-  padding:12px 40px;
-  font-size:16px;
-  background:#007bff;
-  color:#fff;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
+button {
+  background: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
-button:hover{background:#0056b3;}
+button:hover {
+  background: #0056b3;
+}
 .result{
   margin-top:20px;
   font-size:16px;
