--- a/index.html
+++ b/index.html
@@ -281,9 +281,17 @@ const machines = {
       location: "Central Market Bus Stop",
       map: "https://maps.app.goo.gl/9LTtqsJLHR2Qo3yeA"
     },
+    "23J4004": {
+      location: "Kun Khmer Boxing",
+      map: "https://maps.app.goo.gl/ci7SPD1i62sidh8EA?g_st=ic"
+    },
     "30J0535": {
       location: "The Desk-Co Working",
       map: "https://maps.app.goo.gl/wuVdWjx9BpnkTfxE9"
+    },
+    "23J5048": {
+      location: "Deltablue Express Mini Mart",
+      map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
     }
   };
   function findLocation(){
