--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@ const machines = {
     "23J5048": {
       location: "Deltablue Express Mini Mart",
       map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
+    },
+    "23J1234": {
+      location: "Siemreap",
+      map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
     }
   };
   function findLocation(){
