--- a/index.html
+++ b/index.html
@@ -296,6 +296,11 @@ const machines = {
     "23J1234": {
       location: "Siemreap",
       map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
+    },
+    "23J2345": {
+      location: "Battambang",
+      map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
+    }
     }
   };
   function findLocation(){
