--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ const machines = {
       map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
     },
     "23J1234": {
-      location: "Siemreap",
+      location: "Phnom Penh",
       map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
     }
   };
