--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@ a{color:#007bff;font-weight:bold;text-decoration:none;}
 </div>
 
 <script>
+  window.onload = () => {
+  setTimeout(() => {
+    document.getElementById("splash").style.display = "none";
+    document.getElementById("mainApp").style.display = "block";
+  }, 3000); // 3 seconds
+};
+
 const machines = {
     "PYA034": {
       location: "CJCC",
