--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@ const machines = {
     "23J1234": {
       location: "Phnom Penh",
       map: "https://maps.app.goo.gl/97ynbGsaPMW6wiNL7?g_st=ic"
+    },
+    "PYA002": {
+      location: "La vista one",
+      map: "https://maps.app.goo.gl/5bBTP8QYzMC5jN3YA?g_st=ic"
+    "PYA024": {
+      location: "PUC",
+      map: "https://maps.app.goo.gl/tSh65B7tyV8ZgApv9"
     }
   };
   function findLocation(){
