--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@ const machines = {
     "PYA024": {
       location: "PUC",
       map: "https://maps.app.goo.gl/tSh65B7tyV8ZgApv9"
+    },
+    "PYA023": {
+      location: "Maline Office",
+      map: "https://maps.app.goo.gl/f59DfPvt7ThzZ1u17?g_st=ic"
     }
   };
   function findLocation(){
